docs/api/qiskit/0.37/qiskit.primitives.BaseSampler.mdx
---
title: BaseSampler (v0.37)
description: API reference for qiskit.primitives.BaseSampler in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.BaseSampler
---

# BaseSampler

<Class id="qiskit.primitives.BaseSampler" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/primitives/base_sampler.py" signature="BaseSampler(circuits: Iterable[QuantumCircuit] | QuantumCircuit, *args, parameters: Iterable[Iterable[Parameter]] | None = None, **kwargs)" modifiers="class">
  Bases: `abc.ABC`

  Sampler base class

  Base class of Sampler that calculates quasi-probabilities of bitstrings from quantum circuits.

  **Parameters**

  *   **circuits** – Quantum circuits to be executed.
  *   **parameters** – Parameters of each of the quantum circuits. Defaults to `[circ.parameters for circ in circuits]`.

  **Raises**

  **QiskitError** – For mismatch of circuits and parameters list.

  ## Methods

  <span id="qiskit-primitives-basesampler-close" />

  ### close

  <Function id="qiskit.primitives.BaseSampler.close" signature="BaseSampler.close()" modifiers="abstract">
    Close the session and free resources
  </Function>

  ## Attributes

  ### circuits

  <Attribute id="qiskit.primitives.BaseSampler.circuits">
    Quantum circuits to be sampled.

    **Returns**

    The quantum circuits to be sampled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.primitives.BaseSampler.parameters">
    Parameters of quantum circuits.

    **Returns**

    List of the parameters in each quantum circuit.
  </Attribute>
</Class>

